@@ -1,4 +1,6 @@
 DIST libXxf86misc-1.0.1.tar.bz2 222736 RMD160 b600bd56ec931c3ff5087cf46e21b7bd9928eaaf SHA1 cbe908951802d6bd4489a2ca078434c16979d8e5 SHA256 2122d67d49aaa06eeaeb3db173ea8a7048f3b52665e5135874bc5cadada91289
+DIST libXxf86misc-1.0.2.tar.bz2 246038 RMD160 0caedf1facf9a57813cd9e86fb2619585ac2869d SHA1 aea1be067de8c7bdedd917e07d8db608f4a804a8 SHA256 8e64b6b1bf34fcd112b1fd866d77e110b47794e825a996e4492c0ee408957cb3
 EBUILD libXxf86misc-1.0.1.ebuild 594 RMD160 6bce361d8b5d81c415dbfad06e72914553c6fce6 SHA1 86dc70a0a9c12ed65ddf8d22561acd08f4ea68ea SHA256 bd3955f778244cc8d0247d2575c24ab97ea5abde838391ab2db8d1b00697fabf
-MISC ChangeLog 3944 RMD160 265cfa4879c35c3008bf23dad6b5d46ea0be5e09 SHA1 b355014dd1b3a2cbf37cd48135ab2ac543420b73 SHA256 8152d7ba0c62ff749ab0859e52b4d1a340fca88b01f9ae086d209fc8d5f5765d
+EBUILD libXxf86misc-1.0.2.ebuild 593 RMD160 ff175047332d191d206b9994dc4ba45b21f8cb08 SHA1 6d0cd12d918cdf800a8e197abd4036c3b258b137 SHA256 9cc03e04a82a25682b28e08b420da70d6ad8b0e3f2980691cb1ffea835ff2082
+MISC ChangeLog 4077 RMD160 af4700abb33f11facc6d4205f062b68f236229a4 SHA1 779c5a8b07abfed572863bb9e94a411c1d526cd3 SHA256 a8ae695c56d511f26981daca89b7364e990ede1539d287d8e0917de36c489454
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
