@@ -1,0 +1,18 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXxf86misc/libXxf86misc-1.0.2.ebuild,v 1.1 2009/10/12 20:05:16 scarabeus Exp $
+
+# Must be before x-modular eclass is inherited
+# SNAPSHOT="yes"
+
+inherit x-modular
+
+DESCRIPTION="X.Org Xxf86misc library"
+KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris ~x86-winnt"
+IUSE=""
+
+RDEPEND="x11-libs/libX11
+	x11-libs/libXext"
+DEPEND="${RDEPEND}
+	x11-proto/xproto
+	x11-proto/xf86miscproto"
