@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libXxf86misc
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXxf86misc/ChangeLog,v 1.30 2007/02/04 18:26:42 joshuabaergen Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXxf86misc/ChangeLog,v 1.31 2009/10/12 20:05:16 scarabeus Exp $
+
+*libXxf86misc-1.0.2 (12 Oct 2009)
+
+  12 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
+  +libXxf86misc-1.0.2.ebuild:
+  Version bump.
 
   04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
   libXxf86misc-1.0.1.ebuild:
